# pluralio

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: conf.py  cookbook.rst  index.rst  languages.rst  usage.rst
docs/api/: core.rst  en.rst  eo.rst  es.rst  extensibility.rst  fr.rst  it.rst  pt.rst  registry.rst  rules.rst  utils.rst
pluralio/: __init__.py  core.py  registry.py  rules_en.py  rules_es.py  rules_fr.py  rules_it.py  rules_pt.py  utils.py
pluralio/rules/: __init__.py  eo.py
tests/: conftest.py  test_core.py  test_cross_edge_cases.py  test_edge_cases.py  test_en_edge_cases.py  test_en_plurals.py  test_en_singles.py  test_eo_plurals.py  test_eo_singles.py  test_es_edge_cases.py  test_es_plurals.py  test_es_singles.py  test_fr_edge_cases.py  test_fr_plurals.py  test_fr_singles.py  test_inspect.py  test_it_edge_cases.py  test_it_plurals.py  test_it_singles.py  test_property.py  test_pt_edge_cases.py  test_pt_plurals.py  test_pt_singles.py  test_registry.py  test_registry_isolation.py  test_round_trip.py  test_utils.py  test_version.py
