[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pluralio"
version = "1.5.4"
description = "Pluralization and singularization for Python — EN/ES/PT, zero deps, type-safe"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Mathias Paulenko", email = "mathias.paulenko@outlook.com" }]
keywords = ["pluralize", "singularize", "plural", "portuguese", "spanish", "english", "inflection"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/MathiasPaulenko/pluralio"
Repository = "https://github.com/MathiasPaulenko/pluralio"
"Bug Tracker" = "https://github.com/MathiasPaulenko/pluralio/issues"
Changelog = "https://github.com/MathiasPaulenko/pluralio/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
    "hypothesis>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pluralio"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pluralio --cov-report=term-missing --cov-fail-under=95"
